// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SIRI-SX Generator > correctly generates SIRI-SX XML 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<Siri version=\\"2.0\\" xmlns=\\"http://www.siri.org.uk/siri\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" xsi:schemaLocation=\\"http://www.siri.org.uk/siri http://www.siri.org.uk/schema/2.0/xsd/siri.xsd\\">
    <ServiceDelivery>
        <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
        <ProducerRef>DepartmentForTransport</ProducerRef>
        <ResponseMessageIdentifier>abcde-fghij-klmno-pqrst</ResponseMessageIdentifier>
        <SituationExchangeDelivery>
            <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
            <Situations>
                <PtSituationElement>
                    <CreationTime>2023-01-01T01:10:00Z</CreationTime>
                    <ParticipantRef>ref</ParticipantRef>
                    <SituationNumber>aaaaa-bbbbb-ccccc</SituationNumber>
                    <Version>1</Version>
                    <Source>
                        <SourceType>feed</SourceType>
                        <TimeOfCommunication>2023-01-01T01:10:00Z</TimeOfCommunication>
                    </Source>
                    <Progress>open</Progress>
                    <ValidityPeriod>
                        <StartTime>2023-03-03T01:10:00Z</StartTime>
                    </ValidityPeriod>
                    <PublicationWindow>
                        <StartTime>2023-03-02T10:10:00Z</StartTime>
                        <EndTime>2023-03-09T10:10:00Z</EndTime>
                    </PublicationWindow>
                    <PersonnelReason>staffSickness</PersonnelReason>
                    <Planned>true</Planned>
                    <Summary>Disruption Summary</Summary>
                    <Description>Disruption Description</Description>
                    <Consequences>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>verySlight</Severity>
                            <Affects>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>bus</VehicleMode>
                                        <AllLines/>
                                    </AffectedNetwork>
                                </Networks>
                            </Affects>
                        </Consequence>
                    </Consequences>
                </PtSituationElement>
                <PtSituationElement>
                    <CreationTime>2023-02-02T05:10:00Z</CreationTime>
                    <ParticipantRef>ref2</ParticipantRef>
                    <SituationNumber>11111-22222-33333</SituationNumber>
                    <Version>2</Version>
                    <References>
                        <RelatedToRef>
                            <CreationTime>2023-01-01T01:10:00Z</CreationTime>
                            <ParticipantRef>ref</ParticipantRef>
                            <SituationNumber>aaaaa-bbbbb-ccccc</SituationNumber>
                        </RelatedToRef>
                    </References>
                    <Source>
                        <SourceType>directReport</SourceType>
                        <TimeOfCommunication>2023-02-02T10:10:00Z</TimeOfCommunication>
                    </Source>
                    <Progress>closing</Progress>
                    <ValidityPeriod>
                        <StartTime>2023-03-03T01:10:00Z</StartTime>
                        <EndTime>2023-05-01T01:10:00Z</EndTime>
                    </ValidityPeriod>
                    <ValidityPeriod>
                        <StartTime>2023-06-01T01:10:00Z</StartTime>
                        <EndTime>2023-06-22T11:10:00Z</EndTime>
                    </ValidityPeriod>
                    <PublicationWindow>
                        <StartTime>2023-03-05T10:10:00Z</StartTime>
                        <EndTime>2023-05-09T10:10:00Z</EndTime>
                    </PublicationWindow>
                    <MiscellaneousReason>vegetation</MiscellaneousReason>
                    <Planned>false</Planned>
                    <Summary>Disruption Summary 2</Summary>
                    <Description>Disruption Description 2</Description>
                    <InfoLinks>
                        <InfoLink>
                            <Uri>https://example.com</Uri>
                        </InfoLink>
                        <InfoLink>
                            <Uri>https://example.com/2</Uri>
                        </InfoLink>
                    </InfoLinks>
                    <Consequences>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>verySlight</Severity>
                            <Affects>
                                <Operators>
                                    <AffectedOperator>
                                        <OperatorRef>TEST</OperatorRef>
                                        <OperatorName>Test Operator</OperatorName>
                                    </AffectedOperator>
                                </Operators>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>tram</VehicleMode>
                                        <AllLines/>
                                    </AffectedNetwork>
                                </Networks>
                            </Affects>
                        </Consequence>
                    </Consequences>
                </PtSituationElement>
                <PtSituationElement>
                    <CreationTime>2023-03-05T05:10:00Z</CreationTime>
                    <ParticipantRef>ref3</ParticipantRef>
                    <SituationNumber>ddddd-eeeee-fffff</SituationNumber>
                    <Version>1</Version>
                    <Source>
                        <SourceType>directReport</SourceType>
                        <TimeOfCommunication>2023-02-02T10:10:00Z</TimeOfCommunication>
                    </Source>
                    <Progress>published</Progress>
                    <ValidityPeriod>
                        <StartTime>2023-03-03T01:10:00Z</StartTime>
                    </ValidityPeriod>
                    <Repetitions>
                        <DayType>saturday</DayType>
                        <DayType>sunday</DayType>
                    </Repetitions>
                    <PublicationWindow>
                        <StartTime>2023-03-05T10:10:00Z</StartTime>
                    </PublicationWindow>
                    <EnvironmentReason>grassFire</EnvironmentReason>
                    <Planned>true</Planned>
                    <Summary>Disruption Summary 3</Summary>
                    <Description>Disruption Description 3</Description>
                </PtSituationElement>
            </Situations>
        </SituationExchangeDelivery>
    </ServiceDelivery>
</Siri>"
`;

exports[`SIRI-SX Generator > handles invalid disruptions JSON - EndTime before StartTime 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<Siri version=\\"2.0\\" xmlns=\\"http://www.siri.org.uk/siri\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" xsi:schemaLocation=\\"http://www.siri.org.uk/siri http://www.siri.org.uk/schema/2.0/xsd/siri.xsd\\">
    <ServiceDelivery>
        <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
        <ProducerRef>DepartmentForTransport</ProducerRef>
        <ResponseMessageIdentifier>abcde-fghij-klmno-pqrst</ResponseMessageIdentifier>
        <SituationExchangeDelivery>
            <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
            <Situations/>
        </SituationExchangeDelivery>
    </ServiceDelivery>
</Siri>"
`;

exports[`SIRI-SX Generator > handles invalid disruptions JSON - Invalid enum value (EnvironmentReason) 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<Siri version=\\"2.0\\" xmlns=\\"http://www.siri.org.uk/siri\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" xsi:schemaLocation=\\"http://www.siri.org.uk/siri http://www.siri.org.uk/schema/2.0/xsd/siri.xsd\\">
    <ServiceDelivery>
        <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
        <ProducerRef>DepartmentForTransport</ProducerRef>
        <ResponseMessageIdentifier>abcde-fghij-klmno-pqrst</ResponseMessageIdentifier>
        <SituationExchangeDelivery>
            <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
            <Situations/>
        </SituationExchangeDelivery>
    </ServiceDelivery>
</Siri>"
`;

exports[`SIRI-SX Generator > handles invalid disruptions JSON - Missing field (ParticipantRef) with valid disruption as well 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<Siri version=\\"2.0\\" xmlns=\\"http://www.siri.org.uk/siri\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" xsi:schemaLocation=\\"http://www.siri.org.uk/siri http://www.siri.org.uk/schema/2.0/xsd/siri.xsd\\">
    <ServiceDelivery>
        <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
        <ProducerRef>DepartmentForTransport</ProducerRef>
        <ResponseMessageIdentifier>abcde-fghij-klmno-pqrst</ResponseMessageIdentifier>
        <SituationExchangeDelivery>
            <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
            <Situations>
                <PtSituationElement>
                    <CreationTime>2023-03-05T05:10:00Z</CreationTime>
                    <ParticipantRef>ref3</ParticipantRef>
                    <SituationNumber>ddddd-eeeee-fffff</SituationNumber>
                    <Version>1</Version>
                    <Source>
                        <SourceType>directReport</SourceType>
                        <TimeOfCommunication>2023-02-02T10:10:00Z</TimeOfCommunication>
                    </Source>
                    <Progress>published</Progress>
                    <ValidityPeriod>
                        <StartTime>2023-03-03T01:10:00Z</StartTime>
                    </ValidityPeriod>
                    <Repetitions>
                        <DayType>saturday</DayType>
                        <DayType>sunday</DayType>
                    </Repetitions>
                    <PublicationWindow>
                        <StartTime>2023-03-05T10:10:00Z</StartTime>
                    </PublicationWindow>
                    <EnvironmentReason>grassFire</EnvironmentReason>
                    <Planned>true</Planned>
                    <Summary>Disruption Summary 3</Summary>
                    <Description>Disruption Description 3</Description>
                </PtSituationElement>
            </Situations>
        </SituationExchangeDelivery>
    </ServiceDelivery>
</Siri>"
`;
